Mdbook theme fixes code prune, logo and text align

--- a/docs/index.css
+++ b/docs/index.css
@@ -16,11 +16,11 @@ html.para #sidebar {
 }
 #menu-bar img.header-logo {
     width: auto;
-    height: 2vw;
+    height: 1.7vw;
 }
 @media (max-width: 640px) {
     #menu-bar img.header-logo {
-        height: 4vw;
+        height: 9vw;
         width: auto;
     }
 }
